--- a/Financeiro/src/main/webapp/WEB-INF/web.xml
+++ b/Financeiro/src/main/webapp/WEB-INF/web.xml
@@ -17,7 +17,7 @@
 
 <login-config>
 		<auth-method>FORM</auth-method>
-		<realm-name>finanJdbcRealm</realm-name>
+		<realm-name>financeiroJdbcRealm</realm-name>
 		<form-login-config>
 			<form-login-page>/pages/public/login.xhtml</form-login-page>
 			<form-error-page>/pages/public/login.xhtml?error=true</form-error-page>
